# solana-bank-example

./: .gitignore  Makefile  README.md
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
scripts/: package-lock.json  package.json
scripts/keys/: alice_x_pub.json  alice_y_pub.json  bob_x_pub.json  bob_y_pub.json  mint_x_pub.json  mint_y_pub.json
scripts/src/: client.ts  main.ts  utils.ts
