[package]
name = "solana-bank-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.7.11"
thiserror = "1.0.30"

[lib]
crate-type = ["cdylib", "lib"]